@@ -7,10 +7,12 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
@@ -82,37 +84,50 @@ public class ShiftRequestServiceImpl implements ShiftRequestService {
         return Optional.ofNullable(ShiftRequestDto.fromEntity(saved));
     }
 
+
     @Override
     @Transactional(readOnly = true)
     public List<ShiftRequestDto> findByClientIds(Collection<Long> clientIds) {
         if (clientIds == null || clientIds.isEmpty()) {
             return Collections.emptyList();
         }
+
         List<ShiftRequest> entities = shiftRequestRepository.findBySiteClientIdInFetchSiteAndSchedules(clientIds);
         return entities.stream()
                 .map(ShiftRequestDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
+
 
     @Override
     @Transactional(readOnly = true)
     public List<ShiftRequestDto> findShiftRequestDtosForPrincipal(Authentication authentication) {
-        Long userId = userService.getUserIdFromAuthentication(authentication);
-        if (userId == null) return Collections.emptyList();
 
-        boolean isAdmin = authentication != null &&
-                authentication.getAuthorities().stream()
-                        .anyMatch(a -> a.getAuthority().equals("ROLE_ADMINISTRATOR"));
+        if (authentication == null ){
+            return Collections.emptyList();
+        }
+
+        Long userId = userService.getUserIdFromAuthentication(authentication);
+        if (userId == null) {
+            return Collections.emptyList();
+        }    
+
+        boolean isAdmin = authentication.getAuthorities().stream()
+            .map(GrantedAuthority::getAuthority)
+            .anyMatch("ROLE_ADMINISTRATOR"::equals);
 
         if (isAdmin) {
-            return shiftRequestRepository.findAllWithSiteAndSchedules()
-                    .stream()
+            // Método del repo que devuelve todas las entidades con site y schedules inicializados (query con DISTINCT)
+            List<ShiftRequest> entities = shiftRequestRepository.findAllWithSiteAndSchedules();
+            return entities.stream()
                     .map(ShiftRequestDto::fromEntity)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         List<Long> clientIds = userService.getClientIdsForUser(userId);
-        if (clientIds == null || clientIds.isEmpty()) return Collections.emptyList();
+        if (clientIds == null || clientIds.isEmpty()) {
+            return Collections.emptyList();
+        }
 
         return findByClientIds(clientIds);
     }
